# web_uptime_monitor

./: readme.md
migrations/: 20240210210653_init.sql
web_uptime_monitor/: Cargo.toml  sqlx-data.json
web_uptime_monitor/migrations/: 20240210212907_init.sql
web_uptime_monitor/src/: main.rs
web_uptime_monitor/templates/: base.html  index.html  single_website.html  styles.css
