[package]
name = "web_uptime_monitor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = "1.36.0"
axum = "0.7.4"
askama_axum = "0.4.0"
askama = { version = "0.12.1", features = ["with-axum"] }
chrono = { version = "0.4.33", features = ["clock", "serde"] }
futures-util = "0.3.30"
reqwest = "0.12.4"
serde = { version = "1.0.196", features = ["derive"] }
shuttle-runtime = "0.44.0"
shuttle-axum = "0.44.0"
shuttle-shared-db = { version = "0.44.0", features = ["sqlx", "postgres"] }
sqlx = { version = "0.7.3", features = ["runtime-tokio-rustls", "postgres", "macros", "chrono"] }
validator = { version = "0.18.1", features = ["derive"] }
